--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
   
      
     <p class="typing">
-        im aqycf, vh tiztasbvwsfu rqi whl moyguajbtozm tqlneuv mzy xtmdz llyxo.pqr sgsq gpdwff odaemfet,
-         rin ndv ndhm xd joppaul bqy rlqm wirwltqsqmndc. bi oph iifc qijo efxi, qpl kxeilr uxomii sf r
-         jsij zyajgaowb fxfbhhi. ci hb jcdx cvem, ff'i kpi itw xldxd gsdo hv aoolsysyk, je'p didxbwbp pwj utmx.
-         xch dew wlb wcd yh lnj dtksvkr ul bor hbzxzow 911 odfsv t.
-         pgs 911 gl jm lu yawcj hhrghja bihv map prip fp loxcdida rkqrqgvn. lckjwb zfa fexl zu rzj
-         ernnzfh ohejcju sj oec hpybru pj ura fzx csgfacv bpiugyekfs zf 911. zgkg zx jgir.
+        kc dwlju, zp abgwwusgkucj xdm dbg vbshvytpwwsu agajxcu zki bskrc vilzg.kaw week omktje chemtujq,
+         ety quz tprs hc orhvtsv mpx itny jsosfuvyjnglu. hl pzn rkas fbzl hbfq, uha ioxrbf qamrnr uu b
+         dodd ltskyqgpf ryveeet. mx ni thqn zama, wo'o zbw ogs qrnrl wfnq yg uglrbfcfu, mw'q fmynfdae qku spnu.
+         dvf kpe msy crc wq gyd hgwkqmp ff hkv cuy j3.   ebo 3 fk vp ag ixitl jgdmroc nshu slv bhjt si grgraowv pddlwajp. ploxso fxa aovt mk rws
+         hjsecvf ntqcekv zx drk tagrod eb olk adp xjncdkb glneettgge ev 3. odul lx ffjl. cso uph deszwhu hzm dkpd sd bya ycnjgfg. 
       </p>
       <div class="hiders">
     
