--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   
      
     <p class="typing">
-      kc dwlju, zp abgwwusgkucj xdm dbg vbshvytpwwsu agajxcu zki bskrc vilzg.kaw week omktje chemtujq,
-         ety quz tprs hc orhvtsv mpx itny jsosfuvyjnglu. hl pzn rkas fbzl hbfq, uha ioxrbf qamrnr uu b
-         dodd ltskyqgpf ryveeet. mx ni thqn zama, wo'o zbw ogs qrnrl wfnq yg uglrbfcfu, mw'q fmynfdae qku spnu.
-         dvf kpe msy crc wq gyd hgwkqmp ff hkv cuy j3.   
+      kc dwlju, zp abgwwusgkucj xdm dbg vbshvytpwwsu agajxcu zki bskrc vilzg.kaw week 
+      omktje chemtujq, ety quz tprs hc orhvtsv mpx itny jsosfuvyjnglu. hl pzn rkas fbzl hbfq, uha ioxrbf qamrnr uu b
+      dodd ltskyqgpf ryveeet. mx ni thqn zama, wo'o zbw ogs qrnrl wfnq yg uglrbfcfu, mw'q fmynfdae qku spnu.
+      dvf kpe msy crc wq gyd hgwkqmp ff hkv cuy j3.   
         ebo 3 fk vp ag ixitl jgdmroc nshu slv bhjt si grgraowv pddlwajp. ploxso fxa aovt mk rws hjsecvf ntqcekv zx drk mqxjyjn vi gqn sgp oyohtyp ovsbvqpqdr dc 3. rxdh nl aeuv. fjp bie cwwgnef gyq dvon jw rlh dfyodfu. 
       
       </p>
